[package]
name = "mc_mandelbrot"
version = "0.1.0"
license = "MIT"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mcinterface = "0.3.1"
fixed = "1.24"

[features]
default = [ "fixedi32" ]
fixedi32 = []
fixedi64 = []
fixedi128 = []

[profile.dev]
opt-level = 1